# Option

./: .clang-tidy  .gitignore  CMakeLists.txt  Option.hpp  Option.inc.hpp  README.md  main.cpp
.github/workflows/: test.yml
include/poss/: Option.hpp
test/: main.cpp
